# close-enough-tsp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  _conan.py  conanfile.txt  pyproject.toml  requirements.txt  run_tests.sh  setup.py
apps/: CMakeLists.txt  profiling.cpp
benchmark/: README.md  configurations.json  eval.ipynb  manage_instance.ipynb  run.py
cmake/: CCache.cmake  CPM.cmake
cmake/conan/cgal_custom/: CMakeLists.txt  conanfile.py
cmake/conan/cgal_custom/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
cmake/conan/gurobi_public/: conandata.yml  conanfile.py  gurobi_info.json
cmake/conan/gurobi_public/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
cmake/conan/gurobi_public/win10/: CMakeLists.txt
cmake/gurobi_public/: README.md  conanfile.py  gurobi_info.json
cmake/gurobi_public/test_package/: CMakeLists.txt  conanfile.py  test.cpp
cmake/gurobi_public/unix10/: CMakeLists.txt
cmake/gurobi_public/win10/: CMakeLists.txt
evaluation/bedhani_benchmark/: 00_preprocess_instances.ipynb  01_checking_out_some_instances.ipynb  02_solve_instances.py  03_analyze.ipynb  04_solve_instances.py  README.md
evaluation/benchmark_compare_configurations/: 00_run_benchmark.py  README.md
evaluation/carrabs2020_benchmark/: 01_look_at_instances.ipynb  02_run_benchmark.py  configurations.json
evaluation/carrabs2020_benchmark/00_instances/: README.md
evaluation/coverage/: 00_preprocess_instances.ipynb  01_checking_out_some_instances.ipynb  02_solve_instances.py  03_analyze.ipynb  04_trying_lp_idea.ipynb  README.md
evaluation/rnd_ol01/: 00_preprocess_instances.ipynb  01_checking_out_some_instances.ipynb  02_solve_instances.py  03_analyze.ipynb  README.md  configurations.json
examples/: simple_example.ipynb
include/cetsp/: bnb.h  branching_strategy.h  callbacks.h  common.h  heuristics.h  node.h  relaxed_solution.h  root_node_strategy.h  search_strategy.h  soc.h  solution_pool.h
include/cetsp/details/: branching_strategy.h  cgal_kernel.h  convex_hull_order.h  distance_cache.h  missing_disks_lb.h  root_node_strategy.h  search_strategy.h  solution_pool.h
include/cetsp/strategies/: branching_strategy.h  root_node_strategy.h  rule.h  search_strategy.h
include/cetsp/strategies/rules/: convex_hull_rule.h  global_convex_hull_rule.h  layered_convex_hull_rule.h
include/cetsp/utils/: geometry.h  lazy_member.h  timer.h
notebooks/: 00_socp_playground.ipynb  01_socp_mip_full.ipynb  02_heuristic.ipynb  03_lower_bound_improvements.ipynb
pysrc/: 00_socp_playground.ipynb  01_heuristic.ipynb  02_bnb.ipynb  03_lowerbound.ipynb  04_cpp_bnb.ipynb  06_new_bnb_2.ipynb  CMakeLists.txt
pysrc/cetsp/bnb/: __init__.py  node.py  partial_solution.py  shared_info.py  test_partial_solution.py  tree.py
pysrc/cetsp/common/: __init__.py  circle.py  instance.py  tour.py
pysrc/cetsp/core/: __init__.py  _cetsp_bindings.cpp  test_2opt.py
pysrc/cetsp/cpp/: __init__.py  _cetsp_cpp.cpp  test_2opt.py
pysrc/cetsp/heuristics/: __init__.py  two_opt.py
pysrc/cetsp/lowerbound/: tsp.py
pysrc/cetsp/socp/: __init__.py  socp.py  test_socp.py
pysrc/cetsp_bnb2/: __init__.py
pysrc/cetsp_bnb2/bnb/: shared_info.py  test_partial_solution.py  tree.py
pysrc/cetsp_bnb2/common/: __init__.py  circle.py  tour.py
pysrc/cetsp_bnb2/core/: __init__.py  _cetsp_bindings.cpp  optimize.py  plotting.py  test_2opt.py
pysrc/cetsp_bnb2/experimental/: lower_bound_lp.py
pysrc/cetsp_bnb2/heuristics/: __init__.py  adaptive_tsp.py
pysrc/cetsp_bnb2/lowerbound/: tsp.py
pysrc/cetsp_bnb2/socp/: __init__.py
src/: CMakeLists.txt  branching_strategy.cpp  convex_hull_order.cpp  geometry.cpp  heuristics.cpp  node.cpp  relaxed_solution.cpp  root_node_strategy.cpp  soc.cpp
src/branching_strategies/: convex_hull.cpp  global_convex_hull.cpp  layered_convex_hull_rule.cpp
src/root_node_strategies/: convex_hull_root.cpp  longest_edge_plus_farthest_circle.cpp
tests/: CMakeLists.txt  lazy_callback_tests.h  main.cpp  test_2opt.py  test_paths.py  test_tours.py
